--- a/_documentation/1강.md
+++ b/_documentation/1강.md
@@ -70,7 +70,7 @@ https://developer.android.com/studio
 ## Expo CLI 설치
 
 ```
-yarn add global expo-cli
+yarn global add expo-cli
 # or
 npm i -g expo-cli
 ```
